--- a/input_parameters.in
+++ b/input_parameters.in
@@ -1,7 +1,7 @@
-vdw MD symulation tester
-
-part_num      = 125
-system_size   = 6.0
-lattice_type  = SC
-timestep      = 0.0001
-step_num      = 10000
+125     ! part_num
+6.0     ! system_size
+SC      ! lattice_type
+0.0001  ! timestep
+10000   ! step_num
+300.0   ! temperature (Andersen thermostat)
+0.1     ! collision_frequence (Andersen thermostat)
