cutoff added to input_parameters.in
all required modifications in main and and read_input subroutines have been made

--- a/input_parameters.in
+++ b/input_parameters.in
@@ -5,4 +5,5 @@ SC      ! lattice_type (SC/BCC)
 10000   ! step_num
 300.0   ! temperature (Andersen thermostat)
 0.1     ! collision_frequence (Andersen thermostat)
+1.5     ! cutoff
 OFF     ! test_mode (ON/OFF)
