--- a/test/test_template/input_parameters.in
+++ b/test/test_template/input_parameters.in
@@ -1,7 +1,9 @@
-125     ! part_num
+1     ! part_num
 6.0     ! system_size
 SC      ! lattice_type
 0.0001  ! timestep
 10000   ! step_num
 300.0   ! temperature (Andersen thermostat)
 0.1     ! collision_frequence (Andersen thermostat)
+1.5     ! cutoff
+OFF     ! test_mode (ON/OFF)
