--- a/test/test_template/input_parameters.in
+++ b/test/test_template/input_parameters.in
@@ -1,4 +1,4 @@
-1     ! part_num
+125     ! part_num
 6.0     ! system_size
 SC      ! lattice_type
 0.0001  ! timestep
@@ -6,4 +6,4 @@ SC      ! lattice_type
 300.0   ! temperature (Andersen thermostat)
 0.1     ! collision_frequence (Andersen thermostat)
 1.5     ! cutoff
-OFF     ! test_mode (ON/OFF)
+ON      ! test_mode (ON/OFF)
