--- a/input_parameters.in
+++ b/input_parameters.in
@@ -1,6 +1,6 @@
 125     ! part_num
 6.0     ! system_size
-SC      ! lattice_type
+SC      ! lattice_type (SC/BCC)
 0.0001  ! timestep
 10000   ! step_num
 300.0   ! temperature (Andersen thermostat)
