--- a/input_parameters.in
+++ b/input_parameters.in
@@ -4,6 +4,7 @@ Kr      ! atom_type
 SC      ! lattice_type (SC/BCC)
 0.0001  ! timestep
 10000   ! step_num
+10000   ! equilibration_step_num
 300.0   ! temperature (Andersen thermostat)
 0.1     ! collision_frequence (Andersen thermostat)
 1.5     ! cutoff
