Create a subdirectory for the serial code and one for the parallel code

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *.mod
 *.o
 *.anc
-vdw_gas
-binning
-jackknife
-log/*
+serial/vdw_gas
+serial/binning
+parallel/vdw_gas
+parallel/binning
+serial/log/*
